# zeratul

./: .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  FAST_BUILD.md  PROTOCOL.md  README.md  julia_verify_rust.jl  question_for_guille.md  test_verify_ligero_julia.jl  tweets_for_guille.md
binary-fields/: Cargo.toml
binary-fields/src/: elem.rs  lib.rs  poly.rs  poly_fix.rs  simd.rs  traits.rs
crates/binary-fields/: Cargo.toml
crates/binary-fields/src/: elem.rs  lib.rs  poly.rs  simd.rs
crates/chain-client/: Cargo.toml
crates/chain-client/src/: client.rs  config.rs  error.rs  ibc.rs  lib.rs  transfers.rs  xcm.rs
crates/escrow-revive/: .env  Cargo.toml  Makefile  check_escrows.sh  create_test_escrow.sh  deploy.mjs  deploy.sh  escrow-demo  escrow.polkavm  shares.json  shares_output.txt  test_escrow.sh
crates/escrow-revive/demo/: Cargo.toml
crates/escrow-revive/src/: main.rs
crates/ghettobox/: Cargo.toml
crates/ghettobox-vault/: Cargo.toml  test_oprf.sh
crates/ghettobox-vault-guest/: Cargo.toml  lib.rs
crates/ghettobox-vault-pvm/: Cargo.toml  PLAN.md
crates/ghettobox-vault-pvm/deploy/: README.md  ghettobox-vault.service  testnet.sh  zombienet.toml
crates/ghettobox-vault-pvm/scripts/: local-testnet.sh
crates/ghettobox-vault-pvm/src/: main.rs
crates/ghettobox-vault-pvm/tests/: security_tests.rs
crates/ghettobox-vault/src/: main.rs
crates/ghettobox/src/: account.rs  client.rs  crypto.rs  error.rs  lib.rs  network.rs  oprf.rs  oprf_protocol.rs  protocol.rs  share.rs  vss.rs  zoda_oprf.rs
crates/ibp-probe-guest/: Cargo.toml
crates/ibp-probe-guest/src/: lib.rs
crates/ibp-probe-host/: Cargo.toml
crates/ibp-probe-host/src/: lib.rs  primitives.rs  smoldot.rs  substrate_types.rs  trace.rs
crates/ligerito/: CLI_USAGE.md  Cargo.toml  README.md  browser-shell.nix  build-wasm-parallel.sh  build-wasm-webgpu.sh  build-wasm.sh  build.rs  deploy.sh  wasm-build-shell.nix
crates/ligerito-beefy/: Cargo.toml
crates/ligerito-beefy/src/: bls.rs  lib.rs  prover.rs  types.rs  verifier.rs
crates/ligerito-binary-fields/: Cargo.toml  README.md
crates/ligerito-binary-fields/examples/: simd_compare.rs
crates/ligerito-binary-fields/src/: elem.rs  fast_inverse.rs  lib.rs  poly.rs  simd.rs
crates/ligerito-escrow/: Cargo.toml  README.md
crates/ligerito-escrow/src/: escrow.rs  frost.rs  lib.rs  reconstruct.rs  shares.rs  verified_shares.rs
crates/ligerito-merkle/: Cargo.toml  README.md  TRACE.md
crates/ligerito-merkle/src/: batch.rs  lib.rs
crates/ligerito-reed-solomon/: Cargo.toml  README.md
crates/ligerito-reed-solomon/examples/: perf_compare.rs
crates/ligerito-reed-solomon/src/: encode.rs  fft.rs  fft_gf32.rs  lib.rs
crates/ligerito-shielded-pool/: Cargo.toml
crates/ligerito-shielded-pool/src/: channel.rs  commitment.rs  dispute.rs  keys.rs  lib.rs  note.rs  nullifier.rs  poker.rs  proof.rs  value.rs
crates/ligerito/benches/: ligerito_bench.rs
crates/ligerito/deploy/: DEPLOYMENT.md  Dockerfile  README.md  cli-proof-12.proof  docker-compose.yml  ligerito.d.ts  ligerito.js  ligerito_bg.wasm.d.ts  style.css  test-proof-12-cli.proof  test-proof-12.proof  test_verify2.mjs  wasm-proof-12.proof  worker.js
crates/ligerito/docs/: GPU_IMPLEMENTATION.md  WASM_README.md
crates/ligerito/examples/: ashutosh_comparison.rs  bench_batching.rs  bench_comprehensive_k6.rs  bench_gpu_k_variations.rs  benchmark_transcripts.rs  capture_real_challenges.rs  compare_transcripts.rs  compression_prototype.rs  debug_verify.rs  detailed_profile.rs  detailed_proof_breakdown.rs  full_benchmark.rs  full_interop_test.rs  index_compatibility_test.rs  julia_compatible_test.rs  performance_comparison.rs  performance_summary.rs  profile_verifier.rs  proof_size_analysis.rs  quick_bench.rs  rigorous_cross_test.rs  rust_julia_interop_test.rs  test_complete_verifier.rs  test_merkle.rs  test_proof_sizes_k.rs  test_prove_20.rs  test_real_challenges.rs  test_transcript_differences.rs  test_verify_complete.rs  test_verify_ligero_direct.rs  trace_verify_ligero.rs  wasm_demo.html
crates/ligerito/scripts/: build-wasm-parallel.sh  build-wasm-webgpu.sh  build-wasm.sh  deploy.sh  toggle-deps.sh
crates/ligerito/src/: autosizer.rs  backend.rs  configs.rs  cpu_affinity.rs  data_structures.rs  lib.rs  ligero.rs  prover.rs  sumcheck_polys.rs  sumcheck_verifier.rs  transcript.rs  utils.rs  verifier.rs  wasm.rs  wasm_lite.rs  wasm_raw.rs
crates/ligerito/tests/: game_of_life_continuous.rs  game_of_life_interactive.rs  game_of_life_tui.rs  memory_merkle_integration.rs  pcvm_phase2.rs  polkavm_arithmetization_integration.rs  polkavm_end_to_end.rs  polkavm_integration_test.rs  polkavm_simple_add.rs  (+4 more)
crates/narsil/: Cargo.toml  DESIGN.md  PENUMBRA_BRIDGE.md  POKER_ARBITRATION.md  README.md
crates/osst/: CHANGELOG.md  Cargo.toml  README.md
crates/poker-chain-wasm/: Cargo.toml
crates/poker-channel-revive/: Cargo.toml  IPokerChannel.sol
crates/poker-client/: Cargo.toml  build-wasm.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
crates/poker-escrow/: .env.example  Cargo.toml  OPERATIONS.md
crates/poker-p2p/: Cargo.toml
crates/poker-pvm/: BOT_DESIGN.md  Cargo.toml
crates/poker-sdk/: Cargo.toml
ligerito/: COMPARISON.md  Cargo.toml  PERFORMANCE.md  detailed_rust_proof.txt  rust_proof_data.txt
ligerito/benches/: ligerito_bench.rs
ligerito/examples/: cross_verify_julia.rs  debug_verify.rs  detailed_interop.rs  detailed_profile.rs  detailed_proof_breakdown.rs  final_comprehensive_test.rs  interop_test.rs  julia_compatible_test.rs  performance_benchmark.rs  performance_comparison.rs  profile_verifier.rs  proof_size_analysis.rs  rigorous_cross_test.rs  test_julia_indexing.rs  test_real_challenges.rs  test_verify_ligero_direct.rs
ligerito/src/: configs.rs  data_structures.rs  lib.rs  ligero.rs  prover.rs  sumcheck_polys.rs  transcript.rs  utils.rs  verifier.rs
merkle-tree/: Cargo.toml
merkle-tree/src/: batch.rs  lib.rs
reed-solomon/: Cargo.toml
reed-solomon/src/: encode.rs  fft.rs  fft_simple.rs  lib.rs
(+1079 files in other folders)
