[workspace]
members = [
    # Core Ligerito libraries
    "crates/ligerito-binary-fields",
    "crates/ligerito-reed-solomon",
    "crates/ligerito-merkle",
    "crates/ligerito",
    # PolkaVM polynomial commitment verification
    "crates/polkavm-pcvm",
    # Zeratul blockchain primitives
    "crates/zeratul-circuit",
    "crates/zeratul-blockchain",
    "crates/zeratul-client",
    "crates/zeratul-server",
    "crates/zeratul-p2p",
    "crates/test-ligerito-integration",
    # Binaries
    "crates/bin/terminator", "crates/zidecar",
]
# Excluded from workspace (different build targets or incomplete)
exclude = [
    "benchmarks/ashutosh-ligerito",
    "crates/zeratul-guest",  # PolkaVM guest program (requires special build)
]
resolver = "2"

[workspace.package]
authors = ["rotko <hq@rotko.net>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rotkonetworks/zeratul"

[workspace.dependencies]
# Core dependencies
sha2 = { version = "0.10", default-features = false }
rayon = "1.8"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }

# Crypto primitives
merlin = "3.0"
blake3 = "1.5"

# Performance
wide = "0.7"
bytemuck = "1.14"

# Testing
criterion = "0.5"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
