[workspace]
members = [
    # Core Ligerito libraries
    "crates/ligerito-binary-fields",
    "crates/ligerito-reed-solomon",
    "crates/ligerito-merkle",
    "crates/ligerito",
    # PolkaVM polynomial commitment verification
    "crates/polkavm-pcvm",
    # IBP monitoring probes
    "crates/ibp-probe-host",
    # Zeratul blockchain primitives
    "crates/zeratul-circuit",
    "crates/zeratul-blockchain",
    "crates/zeratul-client",
    "crates/zeratul-server",
    "crates/zeratul-p2p",
    "crates/test-ligerito-integration",
    # Binaries
    "crates/bin/zidecar",
    "crates/bin/zafu",
    "crates/bin/ibp-probe",
    # Zync (light client)
    "crates/zync-core",
    "crates/zafu-wasm",
]
# Excluded from workspace (different build targets or incomplete)
exclude = [
    "crates/zeratul-guest",  # PolkaVM guest program (requires special build)
    "crates/ibp-probe-guest", # PolkaVM guest program (requires special build)
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["rotko <hq@rotko.net>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rotkonetworks/zeratul"

[workspace.dependencies]
# workspace crates
ligerito = { path = "crates/ligerito" }
ligerito-binary-fields = { path = "crates/ligerito-binary-fields" }
ligerito-merkle = { path = "crates/ligerito-merkle" }

# Core dependencies
sha2 = { version = "0.10", default-features = false }
rayon = "1.8"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Crypto primitives
merlin = "3.0"
blake3 = "1.5"
blake2 = "0.10"

# Performance
wide = "0.7"
bytemuck = { version = "=1.14.0", default-features = false, features = ["extern_crate_alloc"] }

# zcash
orchard = "0.7"

# Testing
criterion = "0.5"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
