[workspace]
members = [
    # Core Ligerito libraries
    "crates/ligerito-binary-fields",
    "crates/ligerito-reed-solomon",
    "crates/ligerito-merkle",
    "crates/ligerito",
    "crates/ligerito-beefy",
    "crates/ligerito-escrow",
    # IBP monitoring probes
    "crates/ibp-probe-host",
    # Zeratul blockchain primitives
    "crates/zeratul-circuit",
    "crates/zeratul-client",
    "crates/zeratul-server",
    "crates/zeratul-p2p",
    "crates/zeratul-mvp",
    "crates/test-ligerito-integration",
    # Binaries
    "crates/bin/zidecar",
    "crates/bin/zafu",
    "crates/bin/ibp-probe",
    # Zync (light client)
    "crates/zync-core",
    "crates/zafu-wasm",
    # OSST (One-Step Schnorr Threshold)
    "crates/osst",
]
# Excluded from workspace (different build targets, incomplete, or uncommitted)
exclude = [
    "crates/zeratul-guest",  # PolkaVM guest program (requires special build)
    "crates/ibp-probe-guest", # PolkaVM guest program (requires special build)
    "crates/poker-p2p",       # iroh conflicts with zcash sha2 versions
    "crates/barnett-smart-card-protocol", # old ark/proof-toolbox deps from private repo
    "crates/ligerito-shuffle",     # uncommitted
    "crates/state-channel",        # uncommitted
    "crates/poker-sdk",            # uncommitted
    "crates/poker-client",         # uncommitted
    "crates/chain-client",         # uncommitted
    "crates/ligerito-shielded-pool", # uncommitted
    "crates/wim",                  # uncommitted
    "crates/zeratul-blockchain",   # depends on uncommitted crates
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["rotko <hq@rotko.net>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rotkonetworks/zeratul"

[workspace.dependencies]
# workspace crates
ligerito = { path = "crates/ligerito" }
ligerito-binary-fields = { path = "crates/ligerito-binary-fields" }
ligerito-merkle = { path = "crates/ligerito-merkle" }

# Core dependencies
sha2 = { version = "0.10", default-features = false }
rayon = "1.8"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Crypto primitives
merlin = "3.0"
blake3 = "1.5"
blake2 = "0.10"

# Performance
wide = { version = "0.7", default-features = false }
bytemuck = { version = "=1.14.0", default-features = false, features = ["extern_crate_alloc"] }

# zcash
orchard = "0.7"

# Testing
criterion = "0.5"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
