[package]
name = "binary-fields"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rand = { workspace = true }
wide = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []
serde = ["dep:serde"]

# [[bench]]
# name = "field_ops"
# harness = false
