[package]
name = "ligerito"
version = "0.1.0"
edition = "2021"

[dependencies]
binary-fields = { path = "../binary-fields", features = ["serde"] }
reed-solomon = { path = "../reed-solomon" }
merkle-tree = { path = "../merkle-tree", features = ["serde"] }

# Crypto
sha2 = { workspace = true }
merlin = { workspace = true }
blake3 = { workspace = true }

# Parallelism
rayon = { workspace = true }

# Random
rand = { workspace = true }
rand_chacha = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
bincode = "1.3"
zstd = "0.13"
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "prove_verify"
path = "../examples/prove_verify.rs"

[[example]]
name = "fast_prove_verify"
path = "../examples/fast_prove_verify.rs"

[[example]]
name = "tiny_debug"
path = "../examples/tiny_debug.rs"

[[example]]
name = "compression_prototype"
path = "examples/compression_prototype.rs"

[[example]]
name = "detailed_proof_breakdown"
path = "examples/detailed_proof_breakdown.rs"

[[example]]
name = "bench_standardized"
path = "../examples/bench_standardized.rs"

[[example]]
name = "bench_standardized_24"
path = "../examples/bench_standardized_24.rs"

[[example]]
name = "bench_standardized_28"
path = "../examples/bench_standardized_28.rs"

[[example]]
name = "bench_standardized_30"
path = "../examples/bench_standardized_30.rs"

[[example]]
name = "polkadot_monitor"
path = "../examples/polkadot_monitor.rs"

[[example]]
name = "polkadot_monitor_smoldot"
path = "../examples/polkadot_monitor_smoldot.rs"

[[example]]
name = "onchain_verifier_pallet"
path = "../examples/onchain_verifier_pallet.rs"

[[example]]
name = "onchain_verifier_pallet_v2"
path = "../examples/onchain_verifier_pallet_v2.rs"

[[example]]
name = "profile_proving"
path = "../examples/profile_proving.rs"

[[bench]]
name = "ligerito_bench"
harness = false
