[package]
name = "merkle-tree"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha2 = { workspace = true }
blake3 = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
