[package]
name = "reed-solomon"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
hardware-accel = ["binary-fields/hardware-accel"]

[dependencies]
binary-fields = { path = "../binary-fields" }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
