[package]
name = "binary-fields"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rand = { workspace = true }
wide = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true, optional = true }

# portable simd for prover (requires nightly)
[dependencies.portable-simd]
package = "core_simd"
git = "https://github.com/rust-lang/portable-simd"
optional = true

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std"]
std = ["rand/std", "serde?/std"]
serde = ["dep:serde"]
# portable simd for cross-platform prover acceleration (nightly only)
simd = ["portable-simd"]
# x86-specific hardware acceleration (pclmulqdq, avx512)
hardware-accel = []

# [[bench]]
# name = "field_ops"
# harness = false
