[package]
name = "ibp-probe-guest"
version = "0.1.0"
edition = "2021"
description = "IBP monitoring probe - PolkaVM guest program"

[dependencies]
# Minimal dependencies for no_std guest

[features]
default = []

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
