[package]
name = "ligerito-binary-fields"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary extension field arithmetic for Ligerito"
keywords = ["cryptography", "binary-fields", "finite-fields", "gf2"]
categories = ["cryptography", "no-std"]
repository.workspace = true

[dependencies]
rand = { workspace = true }
wide = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true, optional = true }

# portable simd for prover (requires nightly, not available on crates.io)
# Users need to enable this manually with git dependency if needed
# [dependencies.portable-simd]
# package = "core_simd"
# git = "https://github.com/rust-lang/portable-simd"
# optional = true

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std"]
std = ["rand/std", "serde?/std"]
serde = ["dep:serde"]
# portable simd not available in published crate (requires nightly git dependency)
# simd = ["portable-simd"]
# x86-specific hardware acceleration (pclmulqdq, avx512)
hardware-accel = []

# [[bench]]
# name = "field_ops"
# harness = false
