[package]
name = "ligerito-binary-fields"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary extension field arithmetic for Ligerito"
keywords = ["cryptography", "binary-fields", "finite-fields", "gf2"]
categories = ["cryptography", "no-std"]
repository.workspace = true

[dependencies]
rand = { workspace = true, optional = true }
wide = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true, optional = true }

# SCALE codec for Substrate runtime support
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

# portable simd for prover (requires nightly, not available on crates.io)
# Users need to enable this manually with git dependency if needed
# [dependencies.portable-simd]
# package = "core_simd"
# git = "https://github.com/rust-lang/portable-simd"
# optional = true

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std", "rand"]
std = ["rand?/std", "serde?/std", "codec?/std", "scale-info?/std", "wide/std"]
serde = ["dep:serde"]
rand = ["dep:rand"]
# SCALE codec for Substrate runtime (no_std compatible)
scale = ["dep:codec", "dep:scale-info"]
# portable simd not available in published crate (requires nightly git dependency)
# simd = ["portable-simd"]
# x86-specific hardware acceleration (pclmulqdq, avx512)
hardware-accel = []

# [[bench]]
# name = "field_ops"
# harness = false

[[example]]
name = "simd_compare"
required-features = ["hardware-accel"]
