[package]
name = "ligerito-merkle"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Merkle tree implementation for Ligerito polynomial commitments"
keywords = ["cryptography", "merkle-tree", "commitment"]
categories = ["cryptography", "no-std"]

[dependencies]
sha2 = "0.10"
bytemuck = "1.14"
rand = "0.8"
rayon = "1.10"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dev-dependencies]
rand = "0.8"
