[package]
name = "ligerito-merkle"
version = "0.2.2"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Merkle tree implementation for Ligerito polynomial commitments"
keywords = ["cryptography", "merkle-tree", "commitment"]
categories = ["cryptography", "no-std"]

[dependencies]
blake3 = { version = "1.5", default-features = false }
bytemuck = { version = "1.14", default-features = false }
rand = { version = "0.8", default-features = false }
rayon = { version = "1.10", optional = true }

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[features]
default = ["std", "parallel"]
std = []
parallel = ["rayon"]
serde = ["dep:serde"]

[dev-dependencies]
rand = "0.8"
