[package]
name = "ligerito-merkle"
version = "0.3.2"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Merkle tree implementation for Ligerito polynomial commitments"
keywords = ["cryptography", "merkle-tree", "commitment"]
categories = ["cryptography", "no-std"]

[dependencies]
blake3 = { version = "1.5", default-features = false }
bytemuck = { version = "1.14", default-features = false }
rand = { version = "0.8", default-features = false, optional = true }
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

# SCALE codec for Substrate runtime support
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std", "parallel", "rand"]
std = ["codec?/std", "scale-info?/std"]
parallel = ["rayon"]
serde = ["dep:serde"]
rand = ["dep:rand"]
# SCALE codec for Substrate runtime (no_std compatible)
scale = ["dep:codec", "dep:scale-info"]

[dev-dependencies]
rand = "0.8"
