[package]
name = "ligerito-reed-solomon"
version = "0.2.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reed-Solomon erasure coding for Ligerito over binary fields"
keywords = ["cryptography", "reed-solomon", "erasure-coding", "error-correction"]
categories = ["cryptography", "no-std"]

[features]
default = ["std", "parallel"]
std = ["ligerito-binary-fields/std"]
parallel = ["rayon"]
hardware-accel = ["ligerito-binary-fields/hardware-accel"]

[dependencies]
ligerito-binary-fields = { version = "0.2.4", path = "../ligerito-binary-fields", default-features = false }
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
